# metric_learning_keras

./: .gitignore  README.md  pyproject.toml  requirements.txt
L2SoftmaxLoss/: .gitignore  compare_L2SoftmaxLoss.ipynb  model_L2SoftmaxLoss.py
metric_learning_keras/L2SoftmaxLoss/: models.py
metric_learning_keras/L2SoftmaxLoss/notebooks/: compare_L2SoftmaxLoss.ipynb
tests/: test_metric_learning_keras.py
