[tool.poetry]
name = "metric-learning-keras"
version = "0.1.0"
description = ""
authors = ["Tokusumi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "^2.1.0"
keras = "^2.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
